syntax = "proto3";

package ai.stigmer.agentic.workflow.v1;

import "ai/stigmer/agentic/workflow/v1/api.proto";
import "ai/stigmer/commons/sdk/metadata.proto";
import "buf/validate/validate.proto";

// WorkflowManifest is the SDK-CLI contract for workflow blueprints.
//
// This manifest is the serialized representation of workflow configuration
// collected by SDKs (Go, Python, TypeScript). The CLI reads this manifest
// and converts it to Workflow before deploying to the platform.
//
// Architecture: Synthesis Model
// 1. User writes code using SDK (Go, Python, TypeScript)
// 2. SDK collects workflow configuration (tasks, environment variables, etc.)
// 3. SDK serializes to workflow-manifest.pb (this proto)
// 4. CLI reads workflow-manifest.pb
// 5. CLI converts to Workflow (api.proto)
// 6. CLI deploys to Stigmer platform
//
// Why separate from WorkflowSpec?
// - SDK is proto-agnostic (only knows about manifest)
// - CLI handles platform proto conversion
// - SDKs can be language-idiomatic
// - Platform and SDK evolve independently
//
// Multi-Workflow Support:
// - SDKs can define multiple workflows in a single file
// - All workflows are collected and serialized to one manifest
// - CLI deploys all workflows in a batch operation
message WorkflowManifest {
  // Metadata about the SDK that generated this manifest.
  // Shared across all SDK manifests (agent, workflow, etc.).
  ai.stigmer.commons.sdk.SdkMetadata sdk_metadata = 1 [(buf.validate.field).required = true];

  // Workflows collected by the SDK.
  // Multiple workflows can be defined in a single SDK execution.
  // The CLI deploys all workflows in the order they appear.
  repeated Workflow workflows = 2 [(buf.validate.field).repeated.min_items = 1];
}
